--- a/MaintenanceDashboard.Data/MaintenanceDashboard.Data.csproj
+++ b/MaintenanceDashboard.Data/MaintenanceDashboard.Data.csproj
@@ -126,6 +126,10 @@
     <Compile Include="Migrations\202008030502543_ChangedForeignKeyPropertyToString.designer.cs">
       <DependentUpon>202008030502543_ChangedForeignKeyPropertyToString.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202008030600037_AddedPaddleIdAsForeignKeyToSpendedPaddleTableAndReceivedPaddleTable.cs" />
+    <Compile Include="Migrations\202008030600037_AddedPaddleIdAsForeignKeyToSpendedPaddleTableAndReceivedPaddleTable.designer.cs">
+      <DependentUpon>202008030600037_AddedPaddleIdAsForeignKeyToSpendedPaddleTableAndReceivedPaddleTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -178,6 +182,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202008030502543_ChangedForeignKeyPropertyToString.resx">
       <DependentUpon>202008030502543_ChangedForeignKeyPropertyToString.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202008030600037_AddedPaddleIdAsForeignKeyToSpendedPaddleTableAndReceivedPaddleTable.resx">
+      <DependentUpon>202008030600037_AddedPaddleIdAsForeignKeyToSpendedPaddleTableAndReceivedPaddleTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
