--- a/MaintenanceDashboard.Data/MaintenanceDashboard.Data.csproj
+++ b/MaintenanceDashboard.Data/MaintenanceDashboard.Data.csproj
@@ -52,11 +52,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="API\CheckValue.cs" />
-    <Compile Include="API\IEmployeeContext.cs" />
-    <Compile Include="API\IPaddleContext.cs" />
-    <Compile Include="API\IReceivedPaddleContext.cs" />
-    <Compile Include="API\IRegisterToolContext.cs" />
-    <Compile Include="API\ISpendedPaddleContext.cs" />
     <Compile Include="API\ReceivedPaddleContext.cs" />
     <Compile Include="API\SpendedPaddleContext.cs" />
     <Compile Include="Domain\Employee.cs" />
@@ -68,6 +63,11 @@
     <Compile Include="Domain\DataContext.cs" />
     <Compile Include="API\RegisterToolContext.cs" />
     <Compile Include="Domain\SpendedPaddle.cs" />
+    <Compile Include="Interfaces\IEmployeeContext.cs" />
+    <Compile Include="Interfaces\IPaddleContext.cs" />
+    <Compile Include="Interfaces\IReceivedPaddleContext.cs" />
+    <Compile Include="Interfaces\IRegisterToolContext.cs" />
+    <Compile Include="Interfaces\ISpendedPaddleContext.cs" />
     <Compile Include="Migrations\202005281027139_InitialModel.cs" />
     <Compile Include="Migrations\202005281027139_InitialModel.designer.cs">
       <DependentUpon>202005281027139_InitialModel.cs</DependentUpon>
@@ -188,6 +188,12 @@
     <EmbeddedResource Include="Migrations\202008030600037_AddedPaddleIdAsForeignKeyToSpendedPaddleTableAndReceivedPaddleTable.resx">
       <DependentUpon>202008030600037_AddedPaddleIdAsForeignKeyToSpendedPaddleTableAndReceivedPaddleTable.cs</DependentUpon>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MaintenanceDashboard.Common\MaintenanceDashboard.Common.csproj">
+      <Project>{b8e90262-e6d0-4b0b-af41-5f83a39894e5}</Project>
+      <Name>MaintenanceDashboard.Common</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
