--- a/MaintenanceDashboard.Data/MaintenanceDashboard.Data.csproj
+++ b/MaintenanceDashboard.Data/MaintenanceDashboard.Data.csproj
@@ -55,7 +55,6 @@
     <Compile Include="API\IEmployeeContext.cs" />
     <Compile Include="API\IPaddleContext.cs" />
     <Compile Include="API\IReceivedPaddleContext.cs" />
-    <Compile Include="API\IRegisterToolContext.cs" />
     <Compile Include="API\ISpendedPaddleContext.cs" />
     <Compile Include="API\ReceivedPaddleContext.cs" />
     <Compile Include="API\SpendedPaddleContext.cs" />
@@ -64,9 +63,7 @@
     <Compile Include="Domain\ReceivedPaddle.cs" />
     <Compile Include="Domain\Paddle.cs" />
     <Compile Include="API\PaddleContext.cs" />
-    <Compile Include="Domain\RegisterTool.cs" />
     <Compile Include="Domain\DataContext.cs" />
-    <Compile Include="API\RegisterToolContext.cs" />
     <Compile Include="Domain\SpendedPaddle.cs" />
     <Compile Include="Migrations\202005281027139_InitialModel.cs" />
     <Compile Include="Migrations\202005281027139_InitialModel.designer.cs">
@@ -132,6 +129,10 @@
     <Compile Include="Migrations\202008030600037_AddedPaddleIdAsForeignKeyToSpendedPaddleTableAndReceivedPaddleTable.designer.cs">
       <DependentUpon>202008030600037_AddedPaddleIdAsForeignKeyToSpendedPaddleTableAndReceivedPaddleTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202009010936064_DeletedRegisterToolsTable.cs" />
+    <Compile Include="Migrations\202009010936064_DeletedRegisterToolsTable.designer.cs">
+      <DependentUpon>202009010936064_DeletedRegisterToolsTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -187,6 +188,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202008030600037_AddedPaddleIdAsForeignKeyToSpendedPaddleTableAndReceivedPaddleTable.resx">
       <DependentUpon>202008030600037_AddedPaddleIdAsForeignKeyToSpendedPaddleTableAndReceivedPaddleTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202009010936064_DeletedRegisterToolsTable.resx">
+      <DependentUpon>202009010936064_DeletedRegisterToolsTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
