--- a/MaintenanceDashbord.Common/MaintenanceDashbord.Common.csproj
+++ b/MaintenanceDashbord.Common/MaintenanceDashbord.Common.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{491C2945-9DC9-4B47-BC61-1F913DDBFD85}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MaintenanceDashbord.Library</RootNamespace>
-    <AssemblyName>MaintenanceDashbord.Library</AssemblyName>
+    <RootNamespace>MaintenanceDashbord.Common</RootNamespace>
+    <AssemblyName>MaintenanceDashbord.Common</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -50,7 +50,18 @@
     <Compile Include="PlcNetInterface\PlcNetInterface.cs" />
     <Compile Include="PlcNetInterface\Sharp7.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="ViewModel.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
