--- a/Maintenance dashboard.Client/MaintenanceDashboard.Client.csproj
+++ b/Maintenance dashboard.Client/MaintenanceDashboard.Client.csproj
@@ -93,6 +93,7 @@
     <Compile Include="ViewModels\EmployeeViewModel.cs" />
     <Compile Include="ViewModels\PaddleViewModel.cs" />
     <Compile Include="ViewModels\SpendedPaddleViewModel.cs" />
+    <Compile Include="ViewModels\ThermostatViewModel.cs" />
     <Compile Include="Views\CreateEmployeeControl.xaml.cs">
       <DependentUpon>CreateEmployeeControl.xaml</DependentUpon>
     </Compile>
