--- a/MaintenanceDashboard.Client/MaintenanceDashboard.Client.csproj
+++ b/MaintenanceDashboard.Client/MaintenanceDashboard.Client.csproj
@@ -103,8 +103,8 @@
     <Compile Include="Views\BuiltFunctionControl.xaml.cs">
       <DependentUpon>BuiltFunctionControl.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\CreateThermostat.xaml.cs">
-      <DependentUpon>CreateThermostat.xaml</DependentUpon>
+    <Compile Include="Views\CreateThermostatControl.xaml.cs">
+      <DependentUpon>CreateThermostatControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\EditEmployeeControl.xaml.cs">
       <DependentUpon>EditEmployeeControl.xaml</DependentUpon>
@@ -114,6 +114,9 @@
     </Compile>
     <Compile Include="Views\EditPaddleControl.xaml.cs">
       <DependentUpon>EditPaddleControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\EditThermostatControl.xaml.cs">
+      <DependentUpon>EditThermostatControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\HistorySpendedPaddle.xaml.cs">
       <DependentUpon>HistorySpendedPaddle.xaml</DependentUpon>
@@ -145,7 +148,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\CreateThermostat.xaml">
+    <Page Include="Views\CreateThermostatControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -158,6 +161,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\EditPaddleControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\EditThermostatControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -236,8 +243,6 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Gallery\1.gif" />
-    <Resource Include="Gallery\2.gif" />
-    <Resource Include="Gallery\3.gif" />
     <Resource Include="Gallery\4.gif" />
   </ItemGroup>
   <ItemGroup>
@@ -251,6 +256,10 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Gallery\2.gif" />
+    <Resource Include="Gallery\3.gif" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\MaterialDesignThemes.3.0.1\build\MaterialDesignThemes.targets" Condition="Exists('..\packages\MaterialDesignThemes.3.0.1\build\MaterialDesignThemes.targets')" />
