--- a/MaintenanceDashboard.Client/MaintenanceDashboard.Client.csproj
+++ b/MaintenanceDashboard.Client/MaintenanceDashboard.Client.csproj
@@ -94,7 +94,11 @@
     <Compile Include="ViewModels\PaddleViewModel.cs" />
     <Compile Include="ViewModels\ReceivedThermostatViewModel.cs" />
     <Compile Include="ViewModels\SpendedPaddleViewModel.cs" />
+    <Compile Include="ViewModels\SpendedThermostatViewModel.cs" />
     <Compile Include="ViewModels\ThermostatViewModel.cs" />
+    <Compile Include="Views\AcceptanceThermostatControl.xaml.cs">
+      <DependentUpon>AcceptanceThermostatControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\CreateEmployeeControl.xaml.cs">
       <DependentUpon>CreateEmployeeControl.xaml</DependentUpon>
     </Compile>
@@ -122,6 +126,9 @@
     <Compile Include="Views\HistorySpendedPaddle.xaml.cs">
       <DependentUpon>HistorySpendedPaddle.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\HistorySpendedThermostat.xaml.cs">
+      <DependentUpon>HistorySpendedThermostat.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\ManagerEmployeeControl.xaml.cs">
       <DependentUpon>ManagerEmployeeControl.xaml</DependentUpon>
     </Compile>
@@ -137,6 +144,13 @@
     <Compile Include="Views\SpendPaddle.xaml.cs">
       <DependentUpon>SpendPaddle.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\SpendThermostat.xaml.cs">
+      <DependentUpon>SpendThermostat.xaml</DependentUpon>
+    </Compile>
+    <Page Include="Views\AcceptanceThermostatControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\CreateEmployeeControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -173,6 +187,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Views\HistorySpendedThermostat.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\ManagerEmployeeControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -205,6 +223,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Views\SpendThermostat.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -225,12 +247,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Image\Zenek.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Image\MarelliLogo.jpg" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MaintenanceDashboard.Data\MaintenanceDashboard.Data.csproj">
@@ -261,6 +277,15 @@
   <ItemGroup>
     <Resource Include="Gallery\2.gif" />
     <Resource Include="Gallery\3.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Image\Logo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Image\MarelliLogo.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Image\Zenek.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\MaterialDesignThemes.3.0.1\build\MaterialDesignThemes.targets" Condition="Exists('..\packages\MaterialDesignThemes.3.0.1\build\MaterialDesignThemes.targets')" />
